--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -24,7 +24,7 @@
                     </div>
 
                     <div class="col-12 col-md-6">
-                        <div class="main-carousel overflow-visible" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":true, "wrapAround":true, "autoPlay":5000, "imagesLoaded":true, "initialIndex":0, "draggable":false }'>
+                        <div class="main-carousel overflow-visible" data-flickity='{ "cellAlign": "center", "contain": true, "prevNextButtons": false, "pageDots":true, "wrapAround":true, "autoPlay":4000, "imagesLoaded":true, "initialIndex":0, "draggable":true }'>
 
                             {{#promo.hero.screenshots}}
                             <div class="carousel-cell col-11">
