link to staging url

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -20,7 +20,7 @@
                     <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative">
                         <h1 class="display-4">{{promo.hero.header}}</h1>
                         <p class="lead">{{promo.hero.subheader}}</p>
-                        <a target="_blank" href="#" class="btn btn-lg btn-success">View Live Demo &rsaquo;</a>
+                        <a target="_blank" href="https://{{template.slug}}.vertex360.co" class="btn btn-lg btn-success">View Live Demo &rsaquo;</a>
                     </div>
 
                     <div class="col-12 col-md-6">
@@ -29,12 +29,11 @@
                             {{#promo.hero.screenshots}}
                             <div class="carousel-cell col-11">
                                 <div class="card card-sm bg-gradient border-0">
-                                    <a href="#">
+                                    <a target="_blank" href="https://{{template.slug}}.vertex360.co">
                                         <img class="card-img-top" src="{{{.}}}=s1024-c" alt="Screenshot">
                                     </a>
                                     <div class="card-footer d-flex justify-content-between bg-white">
-                                        <a href="#" class="h6 m-0">Screenshot</a>
-                                        <a target="_blank" href="#" data-toggle="tooltip" data-placement="top" title="Open in new tab"><i class="icon-popup"></i></a>
+                                        <a target="_blank" href="https://{{template.slug}}.vertex360.co" class="h6 m-0">Screenshot</a>
                                     </div>
                                 </div>
                             </div>
