--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Wingman Bootstrap Theme</title>
+    <title>{{template.name}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A robust suite of app and landing page templates by Medium Rare">
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500" rel="stylesheet">
@@ -30,7 +30,7 @@
                             <div class="carousel-cell col-11">
                                 <div class="card card-sm bg-gradient border-0">
                                     <a target="_blank" href="https://{{template.slug}}.vertex360.co">
-                                        <img class="card-img-top" src="{{{.}}}=s1024-c" alt="Screenshot">
+                                        <img class="card-img-top" src="{{{.}}}=s1024-c" alt="Vertex 360">
                                     </a>
                                     <div class="card-footer d-flex justify-content-between bg-white">
                                         <a target="_blank" href="https://{{template.slug}}.vertex360.co" class="h6 m-0">Screenshot</a>
@@ -60,27 +60,25 @@
                 <ul class="row feature-list feature-list-sm">
                     <li class="col-12 col-md-4">
                         <a href="#" class="card">
-                            <img alt="Image" src="{{{promo.features.preview_1.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
+                            <img alt="Vertex 360" src="{{{promo.features.preview_1.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
                         <h5>{{promo.features.preview_1.header}}</h5>
                         <p>{{promo.features.preview_1.description}}</p>
                         <a target="_blank" href="{{{promo.features.preview_1.link}}}">View Preview &rsaquo;</a>
                     </li>
-                    <!--end of col-->
 
                     <li class="col-12 col-md-4">
                         <a href="#" class="card">
-                            <img alt="Image" src="{{{promo.features.preview_2.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
+                            <img alt="Vertex 360" src="{{{promo.features.preview_2.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
                         <h5>{{promo.features.preview_2.header}}</h5>
                         <p>{{promo.features.preview_2.description}}</p>
                         <a target="_blank" href="{{{promo.features.preview_2.link}}}">View Preview &rsaquo;</a>
                     </li>
-                    <!--end of col-->
 
                     <li class="col-12 col-md-4">
                         <a href="#" class="card">
-                            <img alt="Image" src="{{{promo.features.preview_3.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
+                            <img alt="Vertex 360" src="{{{promo.features.preview_3.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
                         <h5>{{promo.features.preview_3.header}}</h5>
                         <p>{{promo.features.preview_3.description}}</p>
