--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -14,7 +14,7 @@
 <body>
 
     <div class="main-container">
-        <section class="space-lg bg-gradient overflow-hidden">
+        <section class="bg-gradient overflow-hidden">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative">
