meta tags for template page

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -4,8 +4,18 @@
     <meta charset="utf-8">
     <title>{{template.name}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A robust suite of app and landing page templates by Medium Rare">
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500" rel="stylesheet">
+    <meta name="description" content="{{template.description}}">
+
+    <meta property="og:title" content="{{template.name}}" />
+  	<meta property="og:type" content="article" />
+  	<meta property="og:url" content="https://www.vertex360.co/template/{{template.slug}}" />
+  	<meta property="og:image" content="{{{template.image}}}=s512-c" />
+  	<meta property="og:image:width" content="512px" />
+  	<meta property="og:image:height" content="512px" />
+  	<meta property="og:description" content="{{template.description}}" />
+
+
+    <link rel="icon" href="https://lh3.googleusercontent.com/5SVrpLI9utkuVJbQb48cpD3tar59mgWaWSAM73Ghj8dxFJMD2UOzkhO5ptWDd2uV2eqgSvDCSa-Ad8aOrygXx6nv=s32-c" type="image/png" />    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,400i,500" rel="stylesheet">
     <link href="{{{cdn}}}/wingman/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
     <link href="{{{cdn}}}/wingman/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
     <link href="{{{cdn}}}/wingman/css/theme.css" rel="stylesheet" type="text/css" media="all" />
