replace turbo references with turbo

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -107,9 +107,9 @@
                         <p class="lead">
                             Simply input your content and walk away. It's so easy your grandmother can do it. No messing with confusing editors, drag & drop tools, or ridiculously complicated features for "beginners".
                         </p>
-                        <img alt="Turbo 360" class="img-fluid w-50" src="https://lh3.googleusercontent.com/At6y2BkhC30Bo8giKp1sqmxJDlwrXZtLFIttDoCyotJe7WEEAlymf8cffPrOuIgxzdph_ucU2O2EnzyBUfo5UKgg=s1024">
+                        <img alt="Vertex 360" class="img-fluid w-50" src="https://lh3.googleusercontent.com/At6y2BkhC30Bo8giKp1sqmxJDlwrXZtLFIttDoCyotJe7WEEAlymf8cffPrOuIgxzdph_ucU2O2EnzyBUfo5UKgg=s1024">
                         <p class="lead mb-4 mt-4">
-                          This is where Turbo 360 comes in. All apps on deployed on Turbo 360 are equipped with support for the following:
+                          This is where Vertex 360 comes in. All sites on deployed on Vertex 360 are equipped with support for the following:
                         </p>
 
                         <ul class="list-unstyled list-spacing-sm m-auto features-list w-50">
