remove modal data targets

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -221,7 +221,7 @@
                                                 5 Project Maximum
                                             </li>
                                         </ul>
-                                        <a id="btn-launch-30" href="#" class="btn btn-info mt-0 w-100 mb-4" data-toggle="modal" data-target="#register-modal">LAUNCH YOUR SITE</a>
+                                        <a id="btn-launch-30" href="#" class="btn btn-info mt-0 w-100 mb-4">LAUNCH YOUR SITE</a>
                                     </div>
                                 </div>
                                 <!--end card-->
@@ -251,7 +251,7 @@
                                                 Vertex 360 Developer License
                                             </li>
                                         </ul>
-                                        <a id="btn-launch-50" href="#" class="btn btn-success mt-0 w-100 mb-4" data-toggle="modal" data-target="#upgrade-modal">LAUNCH YOUR SITE</a>
+                                        <a id="btn-launch-50" href="#" class="btn btn-success mt-0 w-100 mb-4">LAUNCH YOUR SITE</a>
                                     </div>
                                 </div>
                             </div>
