--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -450,20 +450,24 @@
         (function(){
             var preloaded = window.__PRELOADED__
             var currentUser = preloaded.user // null if not registered
+            var template = preloaded.template
             var buttons = [
                 // {id:'paypal-button-register', type:'register'},
                 {id:'paypal-button', type:'template'}
             ]
 
-            var postHandler = function(body){
+            var paypalHandler = function(body){
                 // console.log('SEND TO SERVER: ' + JSON.stringify(body)) // SEND TO SERVER: {"orderID":"6MY18367X92392056","payerID":"PHB8GZAU8N74Q"}
                 $.ajax({
-                    url: '/paypal/order',
+                    url: '/paypal/launchtemplate',
                     type: 'POST',
                     data: body,
                     success: function(resp){
-                        // console.log('SUCCESS - ' + JSON.stringify(resp))
-                        window.location.href = '/me'
+                        console.log('SUCCESS - ' + JSON.stringify(resp))
+                        // window.location.href = '/me'
+
+                        console.log('LAUNCH TEMPLATE: ' + JSON.stringify(template))
+                        // charge processed, launch template:
                     },
                     error: function(resp){
                         console.log('ERROR - ' + JSON.stringify(resp))
@@ -486,7 +490,8 @@
                             return actions.order.create({
                                 purchase_units: [{
                                     amount: {
-                                        value: '30.00'
+                                        //value: '30.00'
+                                        value: '3.00'
                                     }
                                 }]
                             });
@@ -494,10 +499,11 @@
                         onApprove: function(data, actions) {
                             return actions.order.capture().then(function(details) {
                                 console.log('Transaction completed by ' + details.payer.name.given_name);
-                                postHandler({
-                                    type: button.type, // register or upgrade
-                                    item: 'template',
-                                    amount: 3000,
+                                paypalHandler({
+                                    type: 'template', // register or upgrade
+                                    item: template.id,
+                                    // amount: 3000,
+                                    amount: 300,
                                     orderID: data.orderID,
                                     user: currentUser.id // null if user not logged in
                                 })
@@ -545,20 +551,20 @@
                     type: 'POST',
                     data: visitor,
                     success: function(resp){
+                        console.log('AJAX SUCCESS - ' + JSON.stringify(resp))
                         if (resp.confirmation != 'success'){
                             alert(resp.message)
                             return
                         }
 
-                        // window.location.href = '/me'
-                        console.log('SUCCESS - ' + JSON.stringify(resp))
+                        currentUser = resp.user
                         document.getElementById('btn-register-modal').click()
                         setTimeout(function(){
                             document.getElementById('btn-purchase-modal').click()
                         }, 400)
                     },
                     error: function(resp){
-                        console.log('ERROR - ' + JSON.stringify(resp))
+                        console.log('AJAX ERROR - ' + JSON.stringify(resp))
                         alert('ERR - ' + resp.message)
                     }
                 })            
