add paypal button to register form

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -385,7 +385,7 @@
           <small>Already have an account? Sign in <a id="href-show-login" style="color:red" href="#">HERE</a></small>
         </div>
         <hr />
-        <button id="input-register" style="width:100%" type="button" class="btn btn-primary btn-lg mb-1">REGISTER</button>
+        <div id="paypal-button-register"></div>
       </div>
     </div>
   </div>
@@ -404,7 +404,7 @@
         <input id="input-login-email" style="background:#f9f9f9;border:none;padding:0.5125rem 1rem" class="form-control mb-2" type="text" placeholder="Email" />
         <input id="input-login-password" style="background:#f9f9f9;border:none;padding:0.5125rem 1rem" class="form-control mb-3" type="password" placeholder="Password" />
         <hr />
-        <div id="paypal-button-register"></div>
+        <button id="input-login" style="width:100%" type="button" class="btn btn-primary btn-lg mb-1">LOG IN</button>
       </div>
     </div>
   </div>
