add price header to register modal

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -385,6 +385,7 @@
           <small>Already have an account? Sign in <a id="href-show-login" style="color:red" href="#">HERE</a></small>
         </div>
         <hr />
+        <h4 id="register-price-header" class="mb-0 text-blue">$30 per 6 months</h4>
         <div id="paypal-button-register"></div>
       </div>
     </div>
