--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -385,7 +385,9 @@
           <small>Already have an account? Sign in <a id="href-show-login" style="color:red" href="#">HERE</a></small>
         </div>
         <hr />
-        <h4 id="register-price-header" class="mb-0 text-blue">$30 per 6 months</h4>
+        <div style="text-align:center">
+            <h4 id="register-price-header" class="mb-1">$30 per 6 months</h4>
+        </div>
         <div id="paypal-button-register"></div>
       </div>
     </div>
